[package]
name = "time-locked-wallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "time_locked_wallet"

# Suppress warnings from dependencies
[lints.rust]
unexpected_cfgs = "allow"
deprecated = "allow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Add Anchor internal features to suppress warnings
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

